--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,79 @@
-ul {
+body{
+    background-color: lightgray;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+section{
+    margin-top: 40px;
+}
+
+#navbar{
+    background-color: #fff;
+    width: 100%;
+    border-bottom: 1px solid;
+}
+
+#navbar li{
+    color: #4d4e53;
+    border-top: 1px solid black;
+    list-style: none;
+}
+
+#navbar a{
     display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-    unicode-bidi: isolate;
+    padding: 10px 30px;
+    color: #4d4e53;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 18px;
+    transition: text-indent .3s ease-in-out;
+}
+
+#navbar a:hover{
+    font-weight: 100;
+    text-indent: 5px;
+}
+
+p {
+    margin: 10px;
+}
+
+ol {
+    margin-left: 30px;
+}
+
+header{
+    color: black;
+    margin: 10px;
+    text-align: center;
+    font-size: 1.8em;
+    font-weight: 500;
+}
+
+code{
+    display: block;
+    text-align: left;
+    word-spacing: pre;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 1.5;
+    background-color: #fff;
+}
+
+@media only screen and (min-width: 850px){
+    body{
+        flex-direction: row;
+    }
+    #navbar{
+        width: 300px;
+        position: fixed;
+        height: 100%;
+    }
+    #main-doc{
+        margin: 0 20px;
+        margin-left: 350px;
+    }
 }
